--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "expo-av": "^13.10.5"
+    "expo-av": "^13.10.5",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
